# kittypaw_rust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TASKS.md  TODO.md  VISION.md  cdk.json  install.sh  pyproject.toml
.github/workflows/: release.yml
.omc/plans/: open-questions.md
crates/kittypaw-channels/: Cargo.toml
crates/kittypaw-channels/src/: channel.rs  telegram.rs  websocket.rs
crates/kittypaw-cli/: Cargo.toml
crates/kittypaw-cli/src/: agent_loop.rs  assistant.rs  compaction.rs  lib.rs  main.rs  schedule.rs  skill_executor.rs  teach_loop.rs
crates/kittypaw-cli/src/commands/: api.rs  chat.rs  daemon.rs  helpers.rs  init.rs  mod.rs  reflection.rs  serve.rs  skills.rs  suggestions.rs
crates/kittypaw-cli/src/skill_executor/: file.rs  mod.rs  telegram.rs
crates/kittypaw-cli/tests/: integration.rs
crates/kittypaw-core/: Cargo.toml
crates/kittypaw-core/src/: capability.rs  config.rs  error.rs  lib.rs  memory.rs  package.rs  package_manager.rs  permission.rs  profile.rs  secrets.rs  skill.rs  telegram.rs  types.rs  workspace.rs
crates/kittypaw-engine/: Cargo.toml
crates/kittypaw-engine/src/: agent_loop.rs  assistant.rs  compaction.rs  lib.rs  mcp_registry.rs  reflection.rs  schedule.rs  security.rs  teach_loop.rs  test_utils.rs
crates/kittypaw-engine/src/agent_loop/: commands.rs  mod.rs
crates/kittypaw-engine/src/schedule/: cron.rs  execution.rs  mod.rs  notification.rs
crates/kittypaw-engine/src/skill_executor/: http.rs  memory.rs  mod.rs  skill_mgmt.rs  telegram.rs  tests.rs  todo.rs  tts.rs
crates/kittypaw-gui/: Cargo.toml  Dioxus.toml  tauri.conf.json
crates/kittypaw-gui/frontend/: package-lock.json  package.json
crates/kittypaw-gui/frontend/.svelte-kit/: ambient.d.ts
crates/kittypaw-gui/frontend/.svelte-kit/output/client/.vite/: manifest.json
crates/kittypaw-gui/frontend/.svelte-kit/output/client/_app/: version.json
crates/kittypaw-gui/frontend/.svelte-kit/output/client/_app/immutable/assets/: 0.CT4P3r22.css
crates/kittypaw-gui/frontend/.svelte-kit/output/client/_app/immutable/chunks/: Bci9jIs1.js  CUrHN2N4.js
crates/kittypaw-gui/frontend/.svelte-kit/output/client/_app/immutable/entry/: app.BKiUcsk3.js
crates/kittypaw-gui/frontend/.svelte-kit/output/client/_app/immutable/nodes/: 2.wTDHBDi9.js
crates/kittypaw-gui/frontend/.svelte-kit/output/server/: manifest.js
crates/kittypaw-gui/frontend/.svelte-kit/output/server/.vite/: manifest.json
crates/kittypaw-gui/frontend/.svelte-kit/output/server/_app/immutable/assets/: _layout.kyoyZ_g2.css  _page.BtchbHIU.css
crates/kittypaw-gui/frontend/.svelte-kit/output/server/chunks/: index.js  index2.js  internal.js  root.js
crates/kittypaw-gui/frontend/.svelte-kit/output/server/entries/fallbacks/: error.svelte.js
crates/kittypaw-gui/frontend/.svelte-kit/output/server/entries/pages/: _layout.svelte.js  _page.svelte.js
crates/kittypaw-gui/frontend/.svelte-kit/output/server/nodes/: 0.js  1.js  2.js
crates/kittypaw-gui/frontend/src/: app.css
crates/kittypaw-gui/frontend/src/lib/: tauri.ts
crates/kittypaw-gui/frontend/src/lib/components/: ChatInput.svelte  ChatMessage.svelte  DiffView.svelte  FilePreview.svelte  FileTree.svelte  PermissionPopup.svelte  PermissionSettings.svelte  SearchBar.svelte  Settings.svelte  Sidebar.svelte  TreeNode.svelte
crates/kittypaw-gui/frontend/src/lib/stores/: chat.ts  permission.ts  workspace.ts
crates/kittypaw-gui/frontend/src/routes/: +layout.svelte  +page.svelte
crates/kittypaw-gui/src/: i18n.rs  main.rs  state.rs
crates/kittypaw-gui/src/commands/: chat.rs  mod.rs  permission.rs  search.rs  settings.rs  workspace.rs
crates/kittypaw-gui/src/components/: app.rs  chat.rs  dashboard.rs  onboarding.rs  permission_dialog.rs  settings.rs  sidebar.rs  skill_config.rs
crates/kittypaw-llm/: Cargo.toml
crates/kittypaw-llm/src/: claude.rs  lib.rs  openai.rs  provider.rs  registry.rs  util.rs
crates/kittypaw-sandbox/: Cargo.toml
crates/kittypaw-sandbox/src/: backend.rs  forked.rs  lib.rs  quickjs.rs  sandbox.rs  threaded.rs
crates/kittypaw-sandbox/tests/: security.rs
crates/kittypaw-store/: Cargo.toml
crates/kittypaw-store/src/: audit.rs  checkpoint.rs  context.rs  conversation.rs  execution.rs  fixes.rs  identity.rs  lib.rs  memory_provider.rs  permission.rs  storage.rs
crates/kittypaw-workspace/: Cargo.toml
crates/kittypaw-workspace/src/: indexer.rs  lib.rs  manager.rs  permission_checker.rs  security.rs  semantic.rs
crates/oochy-channels/: Cargo.toml
crates/oochy-channels/src/: telegram.rs  websocket.rs
crates/oochy-cli/: Cargo.toml
crates/oochy-cli/src/: agent_loop.rs  main.rs  schedule.rs  skill_executor.rs  store.rs  teach_loop.rs
crates/oochy-core/src/: capability.rs  lib.rs  metrics.rs
crates/oochy-llm/: Cargo.toml
crates/oochy-llm/src/: claude.rs
crates/oochy-sandbox/src/: sandbox.rs
crates/oochy-sandbox/tests/: security.rs
docs/: index.html  style.css
docs/en/: index.html
docs/ja/: index.html
docs/site/: CNAME  index.html
docs/superpowers/: competitor-wow-cases.md
infra/: app.py
infra/stacks/: agent_stack.py  api_stack.py  mqtt_stack.py  storage_stack.py
relay/: package-lock.json  package.json  vitest.config.ts  wrangler.toml
relay/src/: index.ts
relay/test/: worker.test.ts
scripts/: build-mac.sh
src/agent_loop/: executor.py  handler.py  llm.py  loop.py  prompt.py  skill_registry.py
src/code_sandbox/: checker.py  handler.py  runner.py
src/core/skills/: chat.pyi  desktop.pyi  telegram.pyi  voice.pyi
src/core/types/: __init__.py  agent_state.py  event.py  message.py  skill.py
src/core/utils/: mqtt.py  s3.py
src/skills/: chat.py  desktop.py  telegram.py  voice.py
src/web_api/: app.py  handler.py
src/web_api/routes/: auth.py  chat.py  events.py  status.py
tests/: e2e-schedule.sh
tests/unit/: test_checker.py  test_prompt.py  test_runner.py  test_skill_registry.py  test_types.py
(+10 files in other folders)
