[package]
name = "kittypaw-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
toml = "0.8"
rusqlite = { version = "0.32", optional = true }

[features]
rusqlite = ["dep:rusqlite"]

[dev-dependencies]
tempfile = "3"
