[package]
name = "kittypaw-gui"
version.workspace = true
edition.workspace = true

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
kittypaw-core = { workspace = true }
kittypaw-llm = { workspace = true }
kittypaw-store = { workspace = true }
kittypaw-sandbox = { workspace = true }
kittypaw-cli = { path = "../kittypaw-cli" }
kittypaw-workspace = { workspace = true }
tracing = { workspace = true }
dirs-next = "2"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
