[package]
name = "kittypaw-llm"
version.workspace = true
edition.workspace = true

[dependencies]
kittypaw-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
async-trait = "0.1"
futures-util = "0.3"
