[package]
name = "kittypaw-sandbox"
version.workspace = true
edition.workspace = true

[dependencies]
kittypaw-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
rquickjs = { version = "0.11", features = ["bindgen", "full-async"] }
async-trait = "0.1"
libc = "0.2"
nix = { version = "0.29", features = ["process", "signal"] }
