[package]
name = "kittypaw-workspace"
version.workspace = true
edition.workspace = true

[dependencies]
kittypaw-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
walkdir = "2"
similar = "2"
glob = "0.3"
uuid = { version = "1", features = ["v4"] }
thiserror = { workspace = true }
tantivy = "0.22"

[dev-dependencies]
tempfile = "3"
